--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "daisyui": "^2.42.1",
     "next": "13.0.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-particles": "^2.5.3",
+    "react-simple-typewriter": "^5.0.1",
+    "swiper": "^8.4.5",
+    "tsparticles": "^2.5.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
