--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "daisyui": "^2.42.1",
-    "next": "13.0.6",
+    "next": "^13.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-particles": "^2.5.3",
